Videos and posts

--- a/components/join-card/join-card.wxml
+++ b/components/join-card/join-card.wxml
@@ -1,5 +1,6 @@
 <!--components/join-card/join-card.wxml-->
-<view class="card {{row ? 'column' : ''}}">
+<view class="card {{row ? 'column' : ''}}" style="background: {{background}}">
+  <view class="mask"></view>
   <image
           wx:if="{{avatar}}"
           src="{{avatar}}"
