--- a/components/join-icon-button/join-icon-button.sass
+++ b/components/join-icon-button/join-icon-button.sass
@@ -4,7 +4,7 @@
   width: $base-font-size * 3
   height: $base-font-size * 3
   border-radius: 50%
-  @include box-shadow-short
+  @include box-shadow-long
   transition: 0.2s
   @include flex-center-center
 
