--- a/components/join-tab-view/join-tab-view.sass
+++ b/components/join-tab-view/join-tab-view.sass
@@ -2,6 +2,7 @@
 
 .header
   background: $background-color
+  border-bottom: 1rpx solid #ccc
 
 .tabs
   height: 2em
@@ -18,3 +19,6 @@
   height: 7rpx
   position: relative
   transition: 0.5s
+
+.active
+  color: $active-gray
