--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,5 +1,11 @@
 <!--pages/home/home.wxml-->
 <view class="page-container">
   <j-icon-button icon="/assets/plus.png" class="btn" bindtap="goPost"></j-icon-button>
-  <j-file-uploader>请选择照片</j-file-uploader>
+  <block wx:for="{{posts}}" wx:key="index">
+    <j-card>
+      <view slot="title">{{item.postTitle}}</view>
+      <view slot="body">{{item.postContent}}</view>
+      <view slot="extra">过期时间：{{item.expiration}}</view>
+    </j-card>
+  </block>
 </view>
