--- a/app.sass
+++ b/app.sass
@@ -1,10 +1,51 @@
 @import "common"
 
+page
+  height: 100%
+  background-size: cover
+  background: url("http://www.joinintern.cn:8090/media/background.png")
+
 .page-container
   width: 90%
   padding: 5%
-  background: $background-color
 
 .background
   background-size: cover
   background: url("http://www.joinintern.cn:8090/media/background.png")
+
+.form
+  padding: 5%
+
+.form-title
+  font-size: 1.5 * $base-font-size
+  text-align: center
+  margin-bottom: 0.5em
+
+.form-item
+  font-size: $base-font-size
+  width: 100%
+  display: flex
+  flex-wrap: wrap
+  justify-content: space-between
+  margin-bottom: 0.5em
+
+  .form-item-title
+    width: 40%
+    color: grey
+
+  .form-item-detail
+    width: 60%
+    font-weight: bold
+
+  .form-item-detail-block
+    margin-top: 1em
+    width: 90%
+    border-radius: 10rpx
+    border: grey dashed 1rpx
+    padding: 5%
+    min-height: 5em
+    font-weight: bold
+
+.form-bordered
+  border-radius: 10rpx
+  @include box-shadow-long
