--- a/app.wxss
+++ b/app.wxss
@@ -1,12 +1,58 @@
+page {
+  height: 100%;
+  background-size: cover;
+  background: url("http://www.joinintern.cn:8090/media/background.png");
+}
+
 .page-container {
   width: 90%;
   padding: 5%;
-  background: #fefefe;
 }
 
 .background {
   background-size: cover;
   background: url("http://www.joinintern.cn:8090/media/background.png");
+}
+
+.form {
+  padding: 5%;
+}
+
+.form-title {
+  font-size: 52.5rpx;
+  text-align: center;
+  margin-bottom: 0.5em;
+}
+
+.form-item {
+  font-size: 35rpx;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: 0.5em;
+}
+.form-item .form-item-title {
+  width: 40%;
+  color: grey;
+}
+.form-item .form-item-detail {
+  width: 60%;
+  font-weight: bold;
+}
+.form-item .form-item-detail-block {
+  margin-top: 1em;
+  width: 90%;
+  border-radius: 10rpx;
+  border: grey dashed 1rpx;
+  padding: 5%;
+  min-height: 5em;
+  font-weight: bold;
+}
+
+.form-bordered {
+  border-radius: 10rpx;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
 /*# sourceMappingURL=app.wxss.map */
