--- a/components/join-card/join-card.sass
+++ b/components/join-card/join-card.sass
@@ -1,6 +1,7 @@
 @import "../../common"
 
 .card
+  position: relative
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2)
   border-radius: 10rpx
   margin: 30rpx auto
@@ -31,3 +32,16 @@
 
 .column-img
   margin-right: 30rpx
+
+.mask
+  position: absolute
+  width: 100%
+  height: 100%
+  left: 0
+  top: 0
+  border-radius: 10rpx
+  background: rgba(0, 0, 0, 0)
+  transition: 0.2s
+
+  &:active
+    background: rgba(255, 255, 255, 0.6)
