--- a/components/join-card/join-card.wxss
+++ b/components/join-card/join-card.wxss
@@ -1,4 +1,5 @@
 .card {
+  position: relative;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   border-radius: 10rpx;
   margin: 30rpx auto;
@@ -35,6 +36,20 @@
 
 .column-img {
   margin-right: 30rpx;
+}
+
+.mask {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  border-radius: 10rpx;
+  background: rgba(0, 0, 0, 0);
+  transition: 0.2s;
+}
+.mask:active {
+  background: rgba(255, 255, 255, 0.6);
 }
 
 /*# sourceMappingURL=join-card.wxss.map */
