--- a/components/join-file-uploader/join-file-uploader.wxss
+++ b/components/join-file-uploader/join-file-uploader.wxss
@@ -9,6 +9,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  background: white;
 }
 
 /*# sourceMappingURL=join-file-uploader.wxss.map */
