--- a/components/join-inline-card/join-inline-card.wxml
+++ b/components/join-inline-card/join-inline-card.wxml
@@ -1,5 +1,5 @@
 <!--components/join-inline-card/join-inline-card.wxml-->
-<view class="card-two-row {{border ? 'bordered' : ''}}">
+<view class="card-two-row {{border ? 'bordered' : ''}}" style="background: {{background}}">
   <view class="first"><slot name="upper"></slot></view>
   <view><slot name="lower"></slot></view>
 </view>
