--- a/components/join-tab-view/join-tab-view.wxss
+++ b/components/join-tab-view/join-tab-view.wxss
@@ -1,5 +1,6 @@
 .header {
   background: #fefefe;
+  border-bottom: 1rpx solid #ccc;
 }
 
 .tabs {
@@ -18,6 +19,10 @@
   height: 7rpx;
   position: relative;
   transition: 0.5s;
+}
+
+.active {
+  color: rgba(1, 1, 1, 0.2);
 }
 
 /*# sourceMappingURL=join-tab-view.wxss.map */
