--- a/components/join-textarea/join-textarea.sass
+++ b/components/join-textarea/join-textarea.sass
@@ -6,6 +6,7 @@
   padding: 5%
   border-radius: 20rpx
   font-size: $base-font-size
+  background: white
 
 .input-title
   font-size: $base-font-size / 1.2
