--- a/pages/post/post.wxml
+++ b/pages/post/post.wxml
@@ -1,2 +1,13 @@
 <!--pages/post/post.wxml-->
-<text>pages/post/post.wxml</text>
+<view class="page-container">
+  <j-input placeholder="输入标题" title="标题" show-bullet bindinput="inputTitle"></j-input>
+  <j-input placeholder="输入时长" title="时长" mode="number" show-bullet bindinput="inputDuration"></j-input>
+  <j-input placeholder="输入地点" title="地点" show-bullet bindinput="inputLocation"></j-input>
+  <j-input placeholder="输入距离" mode="number" title="闵行校区的距离" show-bullet bindinput="inputDistanceMH"></j-input>
+  <j-input placeholder="输入距离" mode="number" title="中北校区的距离" show-bullet bindinput="inputDistanceZB"></j-input>
+  <j-date-picker label="输入开始时间" bindselect="selectStartTime"></j-date-picker>
+  <j-date-picker label="输入结束时间" bindselect="selectEndTime"></j-date-picker>
+  <j-date-picker label="输入过期时间" bindselect="selectExpiration"></j-date-picker>
+  <j-textarea placeholder="输入简介" title="实习描述" show-bullet bindinput="inputDescription"></j-textarea>
+  <j-button bindtap="create">注册</j-button>
+</view>
