--- a/pages/postDetail/postDetail.wxml
+++ b/pages/postDetail/postDetail.wxml
@@ -43,4 +43,6 @@
       <view class="form-item-detail-block">{{post.postContent}}</view>
     </view>
   </view>
+
+  <j-button wx:if="{{show}}" bindtap="toggle">{{followState ? '取消收藏' : '收藏'}}</j-button>
 </view>
