--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,11 +1,20 @@
 <!--pages/home/home.wxml-->
-<view class="page-container">
-  <j-icon-button icon="/assets/plus.png" class="btn" bindtap="goPost"></j-icon-button>
-  <block wx:for="{{posts}}" wx:key="index">
-    <j-card data-post-id="{{item.postId}}" bindtap="toDetail">
-      <view slot="title">{{item.postTitle}}</view>
-      <view slot="body">{{item.postContent}}</view>
-      <view slot="extra">过期时间：{{item.expiration}}</view>
-    </j-card>
-  </block>
+<view>
+  <swiper indicator-dots="true" autoplay="true" interval="3000" circular="true">
+    <block wx:for="{{cells}}" wx:for-index="idx" wx:key="idx">
+      <swiper-item>
+        <image src="{{item}}" mode="widthFix" class="swiper-image"></image>
+      </swiper-item>
+    </block>
+  </swiper>
+  <view class="page-container">
+    <j-icon-button icon="/assets/plus.png" class="btn" bindtap="goPost"></j-icon-button>
+    <block wx:for="{{posts}}" wx:key="index">
+      <j-card data-post-id="{{item.postId}}" bindtap="toDetail">
+        <view slot="title">{{item.postTitle}}</view>
+        <view slot="body">{{item.postContent}}</view>
+        <view slot="extra">过期时间：{{item.expiration}}</view>
+      </j-card>
+    </block>
+  </view>
 </view>
