--- a/components/join-date-picker/join-date-picker.wxss
+++ b/components/join-date-picker/join-date-picker.wxss
@@ -9,6 +9,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  background: white;
 }
 
 /*# sourceMappingURL=join-date-picker.wxss.map */
