--- a/app.sass
+++ b/app.sass
@@ -3,7 +3,7 @@
 page
   height: 100%
   background-size: cover
-  background: url("http://www.joinintern.cn:8090/media/background.png")
+  background: url("https://www.joinintern.cn/media/background.png")
 
 .page-container
   width: 90%
@@ -11,7 +11,7 @@ page
 
 .background
   background-size: cover
-  background: url("http://www.joinintern.cn:8090/media/background.png")
+  background: url("https://www.joinintern.cn/media/background.png")
 
 .form
   padding: 5%
