--- a/components/join-card/join-card.sass
+++ b/components/join-card/join-card.sass
@@ -7,6 +7,7 @@
   margin: 30rpx auto
   font-size: $base-font-size
   padding: 0.7em
+  display: flex
   @include box-shadow-short
 
 .title
@@ -17,6 +18,9 @@
 .middle
   font-size: $base-font-size
   margin-bottom: 1em
+
+.body
+  flex-grow: 2
 
 .extra
   font-size: $base-font-size / 1.5
