--- a/pages/selfDetail/selfDetail.wxml
+++ b/pages/selfDetail/selfDetail.wxml
@@ -1,7 +1,7 @@
 <!--pages/selfDetail/selfDetail.wxml-->
 <view class="page-container">
   <view class="form form-bordered">
-    <view class="form-title">校友信息</view>
+    <view class="form-title">我的信息</view>
     <view class="form-item">
       <view class="form-item-title">姓名：</view>
       <view class="form-item-detail">{{user.nickname}}</view>
