--- a/app.sass
+++ b/app.sass
@@ -45,7 +45,7 @@ page
     border: grey dashed 1rpx
     padding: 5%
     min-height: 5em
-    font-weight: bold
+    //font-weight: bold
 
 .form-bordered
   border-radius: 10rpx
