--- a/components/join-input/join-input.wxml
+++ b/components/join-input/join-input.wxml
@@ -1,5 +1,5 @@
 <!--components/input-view/input-view.wxml-->
 <view>
   <text class="{{showBullet ? 'prepend-bullet' : ''}} input-title">{{title}}</text>
-  <input class="rounded-input" placeholder="{{placeholder}}" bindinput="bindKeyInput"/>
+  <input class="rounded-input" type="{{mode}}" placeholder="{{placeholder}}" bindinput="bindKeyInput"/>
 </view>
