--- a/pages/postDetail/postDetail.wxml
+++ b/pages/postDetail/postDetail.wxml
@@ -38,6 +38,10 @@
       <view class="form-item-title">发布时间：</view>
       <view class="form-item-detail">{{post.postDate}}</view>
     </view>
+    <view class="form-item" data-user="{{author}}" bindtap="toAuthor">
+      <view class="form-item-title">发布者：</view>
+      <view class="form-item-detail">{{author.nickname}}</view>
+    </view>
     <view class="form-item">
       <view class="form-item-title">所需专业：</view>
       <view class="form-item-detail-block chip">
